chore: added scrollbar functionality to avoid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,9 @@ table{
 
 .donar-data{
   margin-top: 50px ;
+  max-height: 450px;
+  overflow-y: auto;
+  scrollbar-color: #ffffff black;
 }
 
 .donar-heading{
@@ -78,6 +81,12 @@ table{
   color: #603F26;
   text-align: center;
   padding: 30px 0 30px 0;
+}
+
+.heading-fixed{
+  position: sticky;
+  top: 0;
+  z-index: 1; 
 }
 
 .hospital-heading{
@@ -131,6 +140,8 @@ table{
 .deleteIcon:active{
   transform: scale(0.8);
 }
+
+
 
 
 
